--- a/testworld.html
+++ b/testworld.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="C:\Users\User\Documents\VisualNewton\VisualNewton\toolbox.js"></script>
+    <script src="C:\Users\User\Documents\VisualNewton\VisualNewton\StaticParticle.js"></script>
     <script src="C:\Users\User\Documents\VisualNewton\VisualNewton\PointParticle.js"></script>
     <script src="C:\Users\User\Documents\VisualNewton\VisualNewton\World.js"></script>
   </head>
